app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-rgb: 255, 255, 255;
  --title: #0f0f0f;
  --background: #faf9f5;
  --primary: #d80e00;
  --secondary: #229eff;
  /* --secondary: #ff1200; */
  --text: #5b645b;
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(var(--background-rgb));
  overflow-x: hidden;
}

body {
  font-family: var(--font-general-sans);
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
    --sidebar-background: 240 5.9% 10%;
    --sidebar-foreground: 240 4.8% 95.9%;
    --sidebar-primary: 224.3 76.3% 48%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 240 3.7% 15.9%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 240 3.7% 15.9%;
    --sidebar-ring: 217.2 91.2% 59.8%;
    --title: #ffffff;
    --background: #0a0a0a;
    --primary: #33cc00;
    --secondary: #cc0f00;
    --text: #a4afa4;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  html {
    overflow-x: hidden;
  }
  body {
    @apply bg-background text-foreground;
    font-family: var(--font-general-sans);
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-general-sans;
  }

  h1 {
    @apply text-3xl font-bold tracking-tight text-[color:var(--title)] sm:text-3xl md:text-4xl lg:text-5xl;
  }

  h2 {
    @apply text-3xl font-bold tracking-tight text-[color:var(--title)] sm:text-3xl md:text-4xl lg:text-5xl;
  }

  h3 {
    @apply text-2xl font-semibold tracking-tight text-[color:var(--title)] md:text-3xl lg:text-3xl;
  }

  p {
    @apply font-dm-mono text-base uppercase text-[color:var(--text)];
  }

  span {
    @apply text-3xl font-bold tracking-tight text-[color:var(--secondary)] sm:text-3xl md:text-4xl lg:text-5xl;
  }
}

